<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_reportIncedent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_15"
        android:orientation="vertical" >

        <com.guardianapp.views.CusFntTextView
            android:id="@+id/tv_locationServiec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/inc_cat"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_eighteen"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/Rel_incidentService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15" >

            <RadioButton
                android:id="@+id/rb_harassment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/dp_10"
                android:button="@drawable/small_circle"
                android:text="@string/harassment"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb_ragging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dp_10"
                android:button="@drawable/small_circle"
                android:text="@string/ragging"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb_accident"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/rb_harassment"
                android:layout_marginTop="@dimen/dp_10"
                android:button="@drawable/small_circle"
                android:text="@string/accident"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb_robbery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/rb_ragging"
                android:layout_marginTop="@dimen/dp_10"
                android:button="@drawable/small_circle"
                android:text="@string/robbery"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/rb_accident"
                android:layout_marginTop="@dimen/dp_10"
                android:button="@drawable/small_circle"
                android:text="@string/others"
                android:textColor="@color/white" />
        </RelativeLayout>

        <com.guardianapp.views.CusFntTextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_eighteen"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTxt_incidentDescrip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_5"
            android:background="#C0C0C0"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_report"
            android:layout_width="100dp"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_edittext"
            android:text="@string/report"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_eighteen"
            android:textStyle="bold" />

        <com.guardianapp.views.CusFntTextView
            android:id="@+id/tv_featureTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/beta_feature"
            android:textColor="@color/green"
            android:textSize="@dimen/font_size_fifteen" />

        <com.guardianapp.views.CusFntTextView
            android:id="@+id/tv_detailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/Str_ReportDetail_text"
            android:textColor="@color/orange"
            android:textSize="@dimen/font_size_thirteen"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>