<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_edittext"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/createProfLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="13dp"
        android:orientation="vertical" >

        <com.guardianapp.views.CusFntTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTxt_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <com.guardianapp.views.CusFntTextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cont_num"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editTxt_country_code"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="#C0C0C0" >
            </EditText>

            <Spinner
                android:id="@+id/phone_spinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="#C0C0C0"
                android:prompt="@string/spinner_title" />
        </LinearLayout>

        <com.guardianapp.views.CusFntTextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email_add"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTxt_email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="#C0C0C0"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:text="@string/add_buddy"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>